src/snapshots/skate__tests__exprs-2.snap
---
source: src/main.rs
expression: f

---
BinOp:
  - Literal:
      Integer: 1
  - Plus
  - Block:
      - If:
          - Literal:
              Integer: 1
          - - Expr:
                Literal:
                  Integer: 2
          - - Expr:
                Literal:
                  Integer: 3

