src/snapshots/skate__tests__exprs-3.snap
---
source: src/main.rs
expression: f

---
BinOp:
  - Literal:
      Integer: 2
  - Plus
  - BinOp:
      - Literal:
          Integer: 4
      - Times
      - Literal:
          Integer: 3

