src/snapshots/skate__tests__exprs-4.snap
---
source: src/main.rs
expression: f

---
BinOp:
  - BinOp:
      - Literal:
          Integer: 4
      - Times
      - Literal:
          Integer: 2
  - Plus
  - Literal:
      Integer: 3

