src/snapshots/skate__tests__exprs-5.snap
---
source: src/main.rs
expression: f

---
BinOp:
  - BinOp:
      - Literal:
          Integer: 1
      - Equals
      - Literal:
          Integer: 2
  - Equals
  - BinOp:
      - Literal:
          Integer: 3
      - Plus
      - Literal:
          Integer: 3

