src/snapshots/skate__tests__functions-10.snap
---
source: src/main.rs
expression: f

---
name: b
args: []
ret: ~
body:
  - Let:
      - x
      - Var: y

