src/snapshots/skate__tests__functions-11.snap
---
source: src/main.rs
expression: f

---
name: c
args: []
ret: ~
body:
  - Let:
      - x
      - Var: y

