src/snapshots/skate__tests__functions-12.snap
---
source: src/main.rs
expression: f

---
name: d
args: []
ret: ~
body:
  - Let:
      - x
      - Block:
          - Expr:
              Var: y

