src/snapshots/skate__tests__functions-13.snap
---
source: src/main.rs
expression: f

---
name: e
args: []
ret: ~
body:
  - Let:
      - x
      - Block:
          - Expr:
              Var: x
          - Expr:
              Var: y
          - Expr:
              Var: z

