src/snapshots/skate__tests__functions-14.snap
---
source: src/main.rs
expression: f

---
name: f
args: []
ret: ~
body:
  - Expr:
      Block:
        - Let:
            - a
            - Var: b
        - Let:
            - c
            - Block:
                - Expr:
                    Var: d
                - Expr:
                    Var: e
  - Expr:
      Var: f

