src/snapshots/skate__tests__functions-15.snap
---
source: src/main.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - If:
      - Var: x
      - - Expr:
            Var: y
      - ~

