src/snapshots/skate__tests__functions-16.snap
---
source: src/main.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - If:
      - Var: x
      - - Expr:
            Var: xf
        - Let:
            - z
            - Var: d
      - - Expr:
            Var: noo
  - Print:
      Var: hell

