src/snapshots/skate__tests__functions-17.snap
---
source: src/main.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - Print:
      Var: a
  - Print:
      Var: b
  - Print:
      Var: xxxxxx

